[project]
name = "agentic-rag-expert-system"
version = "0.1.0"
description = "Agentic RAG Knowledge Base Expert System for 2026 AI Algorithm Interview"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "llama-index>=0.11.0",
    "llama-index-core>=0.11.0",
    "llama-index-llms-openai>=0.2.0",
    "llama-index-embeddings-openai>=0.2.0",
    "llama-index-vector-stores-qdrant>=0.3.0",
    "llama-index-postprocessor-cohere-rerank>=0.2.0",
    "qdrant-client>=1.12.0",
    "rank-bm25>=0.2.2",
    "tavily-python>=0.5.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.5.0",
    "rich>=13.0.0",
    "ragas>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
